sysulits/backuppc, sysulits/backuppc-devel: Remove --log-dir option, use default instead

--- a/sysutils/backuppc-devel/files/update.sh.in
+++ b/sysutils/backuppc-devel/files/update.sh.in
@@ -7,5 +7,4 @@ perl %%PREFIX%%/libexec/backuppc/update.pl \
     --fhs \
     --html-dir %%WWWDIR%% \
     --html-dir-url /backuppc \
-    --install-dir %%PREFIX%% \
-    --log-dir /var/log/BackupPC
+    --install-dir %%PREFIX%%
