--- a/sysutils/backuppc/files/update.sh.in
+++ b/sysutils/backuppc/files/update.sh.in
@@ -7,4 +7,5 @@ perl %%PREFIX%%/libexec/backuppc/update.pl \
     --fhs \
     --html-dir %%WWWDIR%% \
     --html-dir-url /backuppc \
-    --install-dir %%PREFIX%%
+    --install-dir %%PREFIX%% \
+    --log-dir /var/log/BackupPC
