--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,8 +2,16 @@ freebsd_instance:
     image_family: freebsd-12-1
 
 task:
-    name: portlint
-    install_script: pkg install -y portlint
-    pwd_script: pwd
-    ll_script: ls -l
-    lint_script: cd mail/rspamd-devel && portlint -C
+  configure_freebsd_script:
+    - mkdir -p /usr/local/etc/pkg/repos
+    - |
+      cat >> /usr/local/etc/pkg/repos/FreeBSD.conf <<EOF
+      FreeBSD: {
+        url: "pkg+http://pkg.FreeBSD.org/\${ABI}/latest"
+      }
+      EOF
+    - echo DEVELOPER=yes >> /etc/make.conf
+  install_dependencies_script: pkg install -y portlint
+  portlint_script:
+    - portlint -V || true
+    - cd mail/rspamd-devel && portlint -C
