--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,6 +2,7 @@ freebsd_instance:
     image_family: freebsd-12-1
 
 task:
+  name: 12.1
   configure_freebsd_script:
     - mkdir -p /usr/local/etc/pkg/repos
     - |
@@ -27,8 +28,9 @@ task:
     - svn co svn://svn.FreeBSD.org/ports/head/Mk
     - svn co svn://svn.FreeBSD.org/ports/head/Templates
     - svn co svn://svn.FreeBSD.org/ports/head/Tools
-    - svn co svn://svn.FreeBSD.org/ports/head/lang/perl5.30 /tmp/ports/lang/perl5.30 --depth empty
-    - cd /tmp/ports/lang/perl5.30
+    - PERL5_DEFAULT=`sed -En -e 's/^PERL5_DEFAULT\?=[[:space:]]+(.+)/\1/p' /tmp/ports/Mk/bsd.default-versions.mk`
+    - svn co svn://svn.FreeBSD.org/ports/head/lang/perl${PERL5_DEFAULT} /tmp/ports/lang/perl${PERL5_DEFAULT} --depth empty
+    - cd /tmp/ports/lang/perl${PERL5_DEFAULT}
     - svn up version.mk
 
   # portsnap_fetch_script:
@@ -47,6 +49,9 @@ task:
 
   build_script: cd mail/rspamd-devel && make stage && make check-orphans && make package
   install_run_depends_script: pkg install -y ca_root_nss
-  install_script: cd mail/rspamd-devel && make install clean
+  install_script: cd mail/rspamd-devel && make install
   pkg_version_script: pkg version -vRL=
   run_script: service rspamd onestart
+
+  pkg_artifacts:
+    path: "mail/rspamd-devel/work/pkg/*"
