Add math/lapack dependency

--- a/mail/rspamd-devel/Makefile
+++ b/mail/rspamd-devel/Makefile
@@ -63,6 +63,7 @@ DEBUG_FLAGS=	-g -O0
 USE_RC_SUBR=	rspamd
 
 BLAS_CMAKE_ON=	-DENABLE_BLAS=ON
+BLAS_LIB_DEPENDS=	liblapack.so:math/lapack
 BLAS_USES=	blaslapack:openblas
 
 GPERF_CMAKE_ON=	-DENABLE_GPERF_TOOLS=ON
