--- a/mail/rspamd-devel/Makefile
+++ b/mail/rspamd-devel/Makefile
@@ -19,7 +19,7 @@ RUN_DEPENDS=	ca_root_nss>=3.*:security/ca_root_nss
 
 USES=		cmake gnome perl5 pkgconfig sqlite ssl
 USE_LDCONFIG=	yes
-#USE_PERL5=	build run
+USE_PERL5=	build run
 USE_GNOME=	glib20
 
 CONFLICTS_INSTALL=	rspamd
