--- a/mail/rspamd-devel/Makefile
+++ b/mail/rspamd-devel/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	rspamd
-PORTVERSION=	3.6.a1.20230727.01
+PORTVERSION=	3.6.a1.20230731
 CATEGORIES=	mail
 PKGNAMESUFFIX=	-devel
 
@@ -19,7 +19,7 @@ RUN_DEPENDS=	ca_root_nss>=3.*:security/ca_root_nss
 USES=		cmake compiler:c++20-lang cpe gnome perl5 pkgconfig sqlite ssl
 CPE_VENDOR=	${PORTNAME}_project
 USE_GITHUB=	yes
-GH_TAGNAME=	b17a9e5
+GH_TAGNAME=	a1b3ecd
 USE_GNOME=	glib20
 USE_LDCONFIG=	yes
 USE_PERL5=	build run
