--- a/mail/rspamd-devel/Makefile
+++ b/mail/rspamd-devel/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	rspamd
-PORTVERSION=	3.7.a1.20230912
+PORTVERSION=	3.7.0.a1.20230914
 CATEGORIES=	mail
 PKGNAMESUFFIX=	-devel
 
@@ -19,7 +19,7 @@ RUN_DEPENDS=	ca_root_nss>=3.*:security/ca_root_nss
 USES=		cmake compiler:c++20-lang cpe gnome perl5 pkgconfig sqlite ssl
 CPE_VENDOR=	${PORTNAME}_project
 USE_GITHUB=	yes
-GH_TAGNAME=	3f18a42
+GH_TAGNAME=	2f603c1
 USE_GNOME=	glib20
 USE_LDCONFIG=	yes
 USE_PERL5=	build run
@@ -46,7 +46,7 @@ USERS=		rspamd
 GROUPS=		rspamd
 
 PLIST_SUB+=	ETCDIR=etc/rspamd \
-		RSPAMDVERSION=${PORTVERSION:C/^([^.]+\.[^.]+).*/\1/}
+		RSPAMDVERSION=${PORTVERSION:C/^([^.]+(\.[^.]+){2}).*/\1/}
 
 OPTIONS_DEFINE=	BLAS CGP GPERF LUAJIT
 OPTIONS_DEFINE_amd64=	HYPERSCAN
